[project]
name = "dify-apify-integration"
version = "0.1.0"
description = "A Dify plugin for integrating with the Apify platform."
requires-python = ">=3.12"

dependencies = [
    "requests",
    "werkzeug",
    "dify_plugin>=0.4.2,<0.5.0",
    "apify-client",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "ruff",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Formatting defaults
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E203",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.setuptools.packages.find]
include = [
    "provider",
    "tools",
    "endpoints",
    "group",
    "utils"
]